--- a/install.yaml
+++ b/install.yaml
@@ -1,8 +1,12 @@
 name: diffusion
+channels:
+  - pytorch
+  - nvidia
+  - conda-forge
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - _pytorch_select=0.1=cpu_0
   - autopep8=2.0.0=pyhd8ed1ab_0
   - blas=1.0=mkl
   - brotli=1.0.9=h5eee18b_7
@@ -23,28 +27,28 @@ dependencies:
   - cuda-cupti=11.6.124=h86345e5_0
   - cuda-cuxxfilt=11.6.124=hecbf4f6_0
   - cuda-driver-dev=11.6.55=0
-  - cuda-gdb=11.8.86=0
+  - cuda-gdb=12.6.68=0
   - cuda-libraries=11.6.2=0
   - cuda-libraries-dev=11.6.2=0
   - cuda-memcheck=11.8.86=0
-  - cuda-nsight=11.8.86=0
+  - cuda-nsight=12.6.68=0
   - cuda-nsight-compute=11.8.0=0
   - cuda-nvcc=11.6.124=hbba6d2d_0
-  - cuda-nvdisasm=11.8.86=0
+  - cuda-nvdisasm=12.6.68=0
   - cuda-nvml-dev=11.6.55=haa9ef22_0
-  - cuda-nvprof=11.8.87=0
+  - cuda-nvprof=12.6.68=0
   - cuda-nvprune=11.6.124=he22ec0a_0
   - cuda-nvrtc=11.6.124=h020bade_0
   - cuda-nvrtc-dev=11.6.124=h249d397_0
   - cuda-nvtx=11.6.124=h0630a44_0
-  - cuda-nvvp=11.8.87=0
+  - cuda-nvvp=12.6.68=0
   - cuda-runtime=11.6.2=0
   - cuda-samples=11.6.101=h8efea70_0
-  - cuda-sanitizer-api=11.8.86=0
+  - cuda-sanitizer-api=12.6.68=0
   - cuda-toolkit=11.6.2=0
   - cuda-tools=11.6.2=0
+  - cuda-version=12.6=3
   - cuda-visual-tools=11.6.2=0
-  - cudatoolkit=11.0.221=h6bb024c_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - dbus=1.13.18=hb2f20db_0
   - expat=2.4.9=h6a678d5_0
@@ -145,7 +149,7 @@ dependencies:
   - pysocks=1.7.1=py37_1
   - python=3.7.9=h7579374_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pytorch=1.13.0=py3.7_cuda11.6_cudnn8.3.2_0
+  - pytorch=1.13.1=py3.7_cuda11.6_cudnn8.3.2_0
   - pytorch-cuda=11.6=h867d48c_0
   - pytorch-mutex=1.0=cuda
   - qt-main=5.15.2=h327a75a_7
@@ -160,8 +164,8 @@ dependencies:
   - tk=8.6.12=h1ccaba5_0
   - toml=0.10.2=pyhd3eb1b0_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - torchaudio=0.13.0=py37_cu116
-  - torchvision=0.14.0=py37_cu116
+  - torchaudio=0.13.1=py37_cu116
+  - torchvision=0.14.1=py37_cu116
   - tornado=6.2=py37h5eee18b_0
   - typing_extensions=4.3.0=py37h06a4308_0
   - urllib3=1.26.12=py37h06a4308_0
@@ -170,78 +174,78 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
   - pip:
-    - absl-py==1.4.0
-    - accelerate==0.14.0
-    - addict==2.4.0
-    - astor==0.8.1
-    - augmentor==0.2.10
-    - cachetools==5.3.0
-    - charset-normalizer==2.1.1
-    - cloudpickle==2.2.0
-    - colorama==0.4.6
-    - contextlib2==21.6.0
-    - crc32c==2.3.post0
-    - diffusers==0.15.1
-    - einops==0.6.0
-    - ema-pytorch==0.0.10
-    - filelock==3.8.0
-    - flash-attn==1.0.2
-    - future==0.18.2
-    - fvcore==0.1.5.post20220512
-    - google-auth==2.16.2
-    - google-auth-oauthlib==0.4.6
-    - grpcio==1.51.3
-    - huggingface-hub==0.13.4
-    - imageio==2.22.4
-    - importlib-metadata==5.0.0
-    - iopath==0.1.10
-    - joblib==1.2.0
-    - json-tricks==3.16.1
-    - lmdb==1.4.0
-    - markdown==3.4.1
-    - markupsafe==2.1.2
-    - natsort==8.2.0
-    - networkx==2.6.3
-    - nni==2.10
-    - oauthlib==3.2.2
-    - opencv-python==4.7.0.68
-    - pandas==1.3.5
-    - portalocker==2.6.0
-    - prettytable==3.5.0
-    - protobuf==3.20.3
-    - psutil==5.9.4
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pythonwebhdfs==0.2.3
-    - pytorch-fid==0.3.0
-    - pytorch-warmup==0.1.1
-    - pytz==2022.6
-    - pywavelets==1.3.0
-    - pyyaml==6.0
-    - regex==2022.10.31
-    - requests-oauthlib==1.3.1
-    - responses==0.22.0
-    - rsa==4.9
-    - schema==0.7.5
-    - scikit-image==0.19.3
-    - scikit-learn==1.0.2
-    - scipy==1.7.3
-    - simplejson==3.18.0
-    - tabulate==0.9.0
-    - tensorboard==2.11.2
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - termcolor==2.1.0
-    - tfrecord==1.14.1
-    - thop==0.1.1-2209072238
-    - threadpoolctl==3.1.0
-    - tifffile==2021.11.2
-    - timm==0.6.11
-    - tqdm==4.64.1
-    - typeguard==2.13.3
-    - types-toml==0.10.8.1
-    - wcwidth==0.2.5
-    - websockets==10.4
-    - werkzeug==2.2.3
-    - yacs==0.1.8
-    - zipp==3.10.0
+      - absl-py==1.4.0
+      - accelerate==0.14.0
+      - addict==2.4.0
+      - astor==0.8.1
+      - augmentor==0.2.10
+      - cachetools==5.3.0
+      - charset-normalizer==2.1.1
+      - cloudpickle==2.2.0
+      - colorama==0.4.6
+      - contextlib2==21.6.0
+      - crc32c==2.3.post0
+      - diffusers==0.15.1
+      - einops==0.6.0
+      - ema-pytorch==0.0.10
+      - filelock==3.8.0
+      - flash-attn==1.0.2
+      - future==0.18.2
+      - fvcore==0.1.5.post20220512
+      - google-auth==2.16.2
+      - google-auth-oauthlib==0.4.6
+      - grpcio==1.51.3
+      - huggingface-hub==0.13.4
+      - imageio==2.22.4
+      - importlib-metadata==5.0.0
+      - iopath==0.1.10
+      - joblib==1.2.0
+      - json-tricks==3.16.1
+      - lmdb==1.4.0
+      - markdown==3.4.1
+      - markupsafe==2.1.2
+      - natsort==8.2.0
+      - networkx==2.6.3
+      - nni==2.10
+      - oauthlib==3.2.2
+      - opencv-python==4.7.0.68
+      - pandas==1.3.5
+      - portalocker==2.6.0
+      - prettytable==3.5.0
+      - protobuf==3.20.3
+      - psutil==5.9.4
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pythonwebhdfs==0.2.3
+      - pytorch-fid==0.3.0
+      - pytorch-warmup==0.1.1
+      - pytz==2022.6
+      - pywavelets==1.3.0
+      - pyyaml==6.0
+      - regex==2022.10.31
+      - requests-oauthlib==1.3.1
+      - responses==0.22.0
+      - rsa==4.9
+      - schema==0.7.5
+      - scikit-image==0.19.3
+      - scikit-learn==1.0.2
+      - scipy==1.7.3
+      - simplejson==3.18.0
+      - tabulate==0.9.0
+      - tensorboard==2.11.2
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
+      - termcolor==2.1.0
+      - tfrecord==1.14.1
+      - thop==0.1.1-2209072238
+      - threadpoolctl==3.1.0
+      - tifffile==2021.11.2
+      - timm==0.6.11
+      - tqdm==4.64.1
+      - typeguard==2.13.3
+      - types-toml==0.10.8.1
+      - wcwidth==0.2.5
+      - websockets==10.4
+      - werkzeug==2.2.3
+      - yacs==0.1.8
+      - zipp==3.10.0
